# wasmtime

./: Cargo.toml  build.rs
.github/workflows/: main.yml
cranelift/: Cargo.toml  crash_repro.clif  miscompilation.clif  regalloc_panic.clif
cranelift/codegen/: Cargo.toml  build.rs
cranelift/codegen/meta/: Cargo.toml
cranelift/codegen/meta/src/: gen_encodings.rs  gen_inst.rs  gen_settings.rs  gen_types.rs  lib.rs
cranelift/codegen/shared/src/: constants.rs  lib.rs
cranelift/codegen/src/: context.rs  inst_predicates.rs  lib.rs  postopt.rs  prelude_lower.isle  remove_constant_phis.rs  settings.rs  unreachable_code.rs  value_label.rs  write.rs
cranelift/codegen/src/binemit/: mod.rs  stack_map.rs
cranelift/codegen/src/ir/: dfg.rs  extfunc.rs  function.rs  globalvalue.rs  instructions.rs  jumptable.rs  libcall.rs  mod.rs  types.rs
cranelift/codegen/src/isa/: call_conv.rs  constraints.rs  mod.rs
cranelift/codegen/src/isa/x64/: abi.rs  (+5 more)
cranelift/codegen/src/legalizer/: mod.rs  tls.rs
cranelift/codegen/src/machinst/: abi.rs  abi_impl.rs  adapter.rs  buffer.rs  compile.rs  isle.rs  lower.rs  mod.rs  vcode.rs
cranelift/codegen/src/regalloc/: liverange.rs  spilling.rs
cranelift/codegen/src/verifier/: liveness.rs  mod.rs
cranelift/docs/: testing.md
cranelift/faerie/: Cargo.toml
cranelift/faerie/src/: backend.rs
cranelift/filetests/: Cargo.toml
cranelift/filetests/filetests/opt/: invoke.clif
cranelift/filetests/filetests/peepmatic/: simplify_instruction_into_alias_of_value.clif
cranelift/filetests/filetests/runtests/: i128-arithmetic.clif  i128-bitops-count.clif  i128-const.clif  i128-icmp-overflow.clif  i128-icmp.clif  i128-load-store.clif  i128-rotate.clif  invoke.clif  simd-lane-access.clif
cranelift/filetests/filetests/verifier/: invoke.clif
cranelift/filetests/src/: concurrent.rs  function_runner.rs  runone.rs  test_run.rs  test_verifier.rs
cranelift/filetests/src/test_wasm/: env.rs
cranelift/frontend/src/: frontend.rs  switch.rs
cranelift/fuzzgen/: Cargo.toml
cranelift/fuzzgen/src/: function_generator.rs
cranelift/interpreter/src/: frame.rs  interpreter.rs  state.rs  step.rs
cranelift/ir/: Cargo.toml  build.rs
cranelift/ir/meta/: Cargo.toml
cranelift/ir/meta/src/: gen_inst.rs  gen_settings.rs  lib.rs
cranelift/ir/meta/src/cdsl/: mod.rs  types.rs
cranelift/ir/shared/: Cargo.toml
cranelift/ir/src/: constant_hash.rs  lib.rs  settings.rs
cranelift/ir/src/ir/: extfunc.rs  function.rs  libcall.rs  types.rs
cranelift/isle/isle/src/: lexer.rs  parser.rs
cranelift/jit/src/: backend.rs
cranelift/module/: Cargo.toml
cranelift/module/src/: data_context.rs  dwarf.rs  lib.rs  module.rs
cranelift/native/src/: lib.rs
cranelift/object/: Cargo.toml
cranelift/object/src/: backend.rs
cranelift/reader/src/: parser.rs
cranelift/simplejit/src/: backend.rs  lib.rs  memory.rs
cranelift/src/: bugpoint.rs
cranelift/wasm/: Cargo.toml
cranelift/wasm/src/: code_translator.rs  sections_translator.rs  state.rs
cranelift/wasm/src/environ/: dummy.rs  spec.rs
crates/bench-api/: Cargo.toml
crates/cranelift/src/: func_environ.rs
crates/environ/src/: builtin.rs  module.rs  module_environ.rs  vmoffsets.rs
crates/jit/: Cargo.toml
crates/jit/src/: native.rs
crates/runtime/src/: export.rs  instance.rs  lib.rs  libcalls.rs  traphandlers.rs  vmcontext.rs
crates/types/src/: lib.rs
crates/wasmtime/: Cargo.toml
crates/wasmtime/src/: config.rs  externals.rs  func.rs  instance.rs  linker.rs  types.rs
crates/wasmtime/src/store/: data.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cranelift-icache.rs
scripts/: publish.rs
tests/all/: func.rs  gc.rs  wast.rs
tests/all/debug/: lldb.rs  translate.rs
(+68 files in other folders)
