[package]
authors = ["The Cranelift Project Developers"]
name = "cranelift-ir"
version = "0.99.0"
description = "IR for Cranelift"
license = "Apache-2.0 WITH LLVM-exception"
documentation = "https://docs.rs/cranelift-codegen"
repository = "https://github.com/bytecodealliance/wasmtime"
categories = ["no-std"]
readme = "README.md"
keywords = ["compile", "compiler", "jit"]
build = "build.rs"
edition.workspace = true

[dependencies]
cranelift-entity = { workspace = true }
cranelift-bforest = { workspace = true }
hashbrown = { workspace = true, features = ["raw"] }
target-lexicon = { workspace = true }
log = { workspace = true }
serde = { version = "1.0.94", features = ["derive"], optional = true }
gimli = { workspace = true, features = ["write"], optional = true }
smallvec = { workspace = true }
souper-ir = { version = "2.1.0", optional = true }
# It is a goal of the cranelift-ir crate to have minimal external dependencies.
# Please don't add any unless they are essential to the task of creating binary
# machine code. Integration tests that need external dependencies can be
# accomodated in `tests`.

[dev-dependencies]
similar = "2.1.0"

[build-dependencies]
cranelift-ir-meta = { path = "meta", version = "0.99.0" }
cranelift-isle = { path = "../isle/isle", version = "=0.99.0" }

[features]
default = ["std", "unwind", "host-arch"]

# The "std" feature enables use of libstd. The "core" feature enables use
# of some minimal std-like replacement libraries. At least one of these two
# features need to be enabled.
std = []

# The "core" feature used to enable a hashmap workaround, but is now
# deprecated (we (i) always use hashbrown, and (ii) don't support a
# no_std build anymore). The feature remains for backward
# compatibility as a no-op.
core = []

# Enables detailed logging which can be somewhat expensive.
trace-log = []

# This enables unwind info generation functionality.
unwind = ["gimli"]

# ISA targets for which we should build.
# If no ISA targets are explicitly enabled, the ISA target for the host machine is enabled.
x86 = []
arm64 = []
s390x = []
riscv64 = []
# Enable the ISA target for the host machine
host-arch = []

# For dependent crates that want to serialize some parts of cranelift
enable-serde = [
    "serde",
    "cranelift-entity/enable-serde",
    "smallvec/serde"
]

# Enable support for the Souper harvester.
souper-harvest = ["souper-ir", "souper-ir/stringify"]

# Report any ISLE errors in pretty-printed style.
isle-errors = ["cranelift-isle/fancy-errors"]

# Put ISLE generated files in isle_generated_code/, for easier
# inspection, rather than inside of target/.
isle-in-source-tree = []
