[package]
name = "cranelift-ir-meta"
authors = ["The Cranelift Project Developers"]
version = "0.99.0"
description = "Metaprogram for cranelift-ir"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/wasmtime"
readme = "README.md"
edition.workspace = true

[package.metadata.docs.rs]
rustdoc-args = [ "--document-private-items" ]

[dependencies]
