[package]
authors = ["The Cranelift Project Developers"]
name = "cranelift-ir-shared"
version = "0.99.0"
description = "For code shared between cranelift-ir-meta and cranelift-ir"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/wasmtime"
readme = "README.md"
edition.workspace = true

[dependencies]
# Since this is a shared dependency of several packages, please strive to keep this dependency-free
# when no features are enabled.
